[common] fix(global styles): disabled atomic block alignment on mobile

--- a/packages/common/statics/styles/global.scss
+++ b/packages/common/statics/styles/global.scss
@@ -83,7 +83,8 @@
     margin-left: 0;
 
     @include phone {
-      margin-left: calc((100% - #{$textMobileWidth}) / 2);
+      float: none;
+      margin-right: 0;
     }
   }
 }
@@ -106,7 +107,8 @@
     margin-right: 0;
 
     @include phone {
-      margin-right: calc((100% - #{$textMobileWidth}) / 2);
+      float: none;
+      margin-left: 0;
     }
   }
 }
